display version, favicon.png

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         color: red;
     }
 </style>
-<head></head>
+<head>
+    <link rel="icon" type="image/png" href="/favicon.png" data-trunk/>
+</head>
 <body></body>
 </html>
